--- a/pids.master
+++ b/pids.master
@@ -51,6 +51,8 @@
     <link href="plugins/datatables/Buttons-1.0.3/css/buttons.bootstrap.min.css" rel="stylesheet" />
     <link href="plugins/datatables/Buttons-1.0.3/css/buttons.dataTables.min.css" rel="stylesheet" />
 
+    <%--<link href="https://cdn.datatables.net/buttons/1.4.0/css/buttons.dataTables.min.css" rel="stylesheet" />--%>
+
     <%--<link href="plugins/dataTables/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="plugins/datatables/dataTables.bootstrap.css" rel="stylesheet">
     <link href="plugins/dataTables/buttons.dataTables.min.css" rel="stylesheet" />--%>
